# Datset_Dev_Data_Engineering

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/models/: __init__.py
backend/app/services/cleaning/: __init__.py  engine_v1.py
backend/app/services/ingestion/: ingestion_service.py
