[tool.poetry]
name = "enterprise-data-ingestion"
version = "0.1.0"
description = "Pipeline asíncrono y resiliente para la ingesta y limpieza de grandes volúmenes de datos."
authors = ["Portfolio Showcase <tu_correo@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pandas = "^2.0.0"
pyarrow = "^12.0.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
